# cloud-ssh

./: .dockerignore  .editorconfig  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  Makefile  README.md  book.toml
.github/workflows/: ci.yml  docker.yml  docs.yml  release.yml
crates/cloud-ssh-core/: Cargo.toml
crates/cloud-ssh-core/src/: lib.rs
crates/cloud-ssh-server/: Cargo.toml
crates/cloud-ssh-server/src/: main.rs
docs/: SUMMARY.md  architecture.md  development.md  index.md  mermaid-init.js  nav.json
spec/: 001-collaborative-terminal-room.md  002-rust-runtime-architecture.md  003-room-state-and-protocol.md  README.md
