[package]
name = "cloud-ssh-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Shared model types for Cloud SSH collaborative terminal rooms"
readme = "../../README.md"
keywords.workspace = true
categories.workspace = true

[dependencies]
serde.workspace = true

[lints]
workspace = true
